<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/draLayout_trangChinh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_trangChinh"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/holo_blue_dark"
                app:title="Liên Hệ">

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/gioiThieu"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/gioiThieu2"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/lienHe"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/lienHe1"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/lienHe2"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/lienHe3"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/lienHe4"
                android:textSize="13dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="20dp"
                        android:text="Cửa hàng trực tuyến (Online) với ưu đãi"
                        android:textColor="#0B20DF"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Bán hàng online với ưu đãi riêng cực lớn"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="20dp"
                            android:layout_gravity="bottom"
                            android:src="@drawable/dienthoai"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:text=" Điện thoại: Tel: 098.668.1189 - 098.568.1189"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="Địa Chỉ: 448/2/31,Lê Văn Việt, TNP A, TP Thủ Đức"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="Thời gian mở cửa:"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_marginLeft="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="- Từ 8h30 đến 22h"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/fb"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/instagram"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/tiktok"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/youtube"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/naviView_trangChinh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <ListView
                android:id="@+id/listView_trangChinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>